# LargePrimeNumbers

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmarks_utility.h  perf_test_accelerated_lucas_on_largest_prime.cpp  perf_test_bpsw.cpp  perf_test_bpsw_on_largest_prime.cpp  perf_test_determenistic_vs_probable.cpp  perf_test_general_probable.cpp  perf_test_general_vs_lucas_probable.cpp  perf_test_lucas.cpp  perf_test_lucas_lehmer.cpp  perf_test_lucas_with_selfridge.cpp  perf_test_lucas_with_selfridge_on_largest_prime.cpp  perf_test_qs.cpp  test_accelerated_lucas_on_largest_prime.cpp  test_bpsw.cpp  test_bpsw_on_largest_prime.cpp  test_determenistic_vs_probable.cpp  test_general_probable.cpp  test_general_vs_lucas_probable.cpp  test_lucas.cpp  test_lucas_lehmer.cpp  test_lucas_with_selfridge.cpp  test_lucas_with_selfridge_on_largest_prime.cpp  test_qs.cpp  utility.h
contrib/googletest/: README.md  googletest-distribution.cbp
contrib/googletest/docs/: advanced.md  gmock_for_dummies.md  primer.md
contrib/googletest/docs/reference/: assertions.md  mocking.md
contrib/googletest/googlemock/: gmock.cbp
contrib/googletest/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  (+5 more)
contrib/googletest/googletest/: gtest.cbp
programs/: CMakeLists.txt  except.cpp  except.h  large_prime_numbers  main.cpp
src/: CMakeLists.txt  deterministic_primality_tests.h  lucas_pseudoprimes.cpp  lucas_pseudoprimes.h  mersenne_numbers_generator.cpp  primality_status.h  primality_tests_wrapper.h  primality_tests_wrapper.tpp  probable_primality_tests.cpp  probable_primality_tests.h  probable_primes.cpp  probable_primes.h  random_generator.h  utilities.cpp  utilities.h
src/deterministic_tests/: CMakeLists.txt  deterministic_primality_tests.cpp  deterministic_primality_tests.h
src/probable_prime_tests/: CMakeLists.txt  lucas_pseudoprimes.cpp  lucas_pseudoprimes.h  probable_primality_tests.cpp  probable_primality_tests.h
src/quadratic_sieve_factorization/: CMakeLists.txt  dixons_algorithm.cpp  dixons_algorithm.h  linalg.cpp  linalg.h  multiple_polynomial_quadratic_sieve.cpp  multiple_polynomial_quadratic_sieve.h  quadratic_congruences_solving.cpp  quadratic_congruences_solving.h  quadratic_sieve.cpp  quadratic_sieve.h  quadratic_sieving.cpp  sieving.cpp  sieving.h
tests/: CMakeLists.txt  low_primes_checker.h  low_primes_probable_primes_test.cpp  mpqs_test.cpp  primes_2_to_99991.txt  probable_primes_test  probable_primes_test.cpp  utilities_test.cpp  validity_test_lucas_lehmer.cpp  validity_test_on_low_primes.cpp  validity_test_qs.cpp  validity_test_utilities.cpp
(+10 files in other folders)
