macro(add_test test_name)
    add_executable(${test_name} ${test_name}.cpp)
    target_link_libraries(${test_name} PRIVATE primality_tests benchmark gmp gmpxx)
    target_include_directories(${test_name} PRIVATE "${PROJECT_SOURCE_DIR}/src")
endmacro()

add_test(perf_test_accelerated_lucas_on_largest_prime)
add_test(perf_test_lucas)
add_test(perf_test_lucas_with_selfridge)
add_test(perf_test_lucas_with_selfridge_on_largest_prime)
add_test(perf_test_general_probable)
add_test(perf_test_general_vs_lucas_probable)
add_test(perf_test_bpsw)
add_test(perf_test_bpsw_on_largest_prime)
add_test(perf_test_determenistic_vs_probable)
add_test(perf_test_lucas_lehmer)
add_test(perf_test_qs)
